@@ -29,7 +29,7 @@ rescale(x, binary.inputs="center")
 }
 
 \author{Andrew Gelman \email{gelman@stat.columbia.edu};
-        Yu-Sung Su \email{ys463@columbia.edu}
+        Yu-Sung Su \email{suyusung@tsinghua.edu.cn}
 }
 
 \seealso{\code{\link{standardize}}
